@@ -22,6 +22,7 @@ import java.util.HashMap;
 import java.util.Map;
 
 import com.badlogic.gdx.backends.lwjgl.audio.LwjglAudio;
+import com.badlogic.gdx.utils.*;
 import org.lwjgl.opengl.AWTGLCanvas;
 import org.lwjgl.opengl.Display;
 
@@ -36,10 +37,6 @@ import com.badlogic.gdx.LifecycleListener;
 import com.badlogic.gdx.Net;
 import com.badlogic.gdx.Preferences;
 import com.badlogic.gdx.backends.lwjgl.audio.OpenALLwjglAudio;
-import com.badlogic.gdx.utils.Array;
-import com.badlogic.gdx.utils.Clipboard;
-import com.badlogic.gdx.utils.Null;
-import com.badlogic.gdx.utils.SharedLibraryLoader;
 
 import java.awt.Canvas;
 import java.awt.Container;
@@ -96,7 +93,7 @@ public class LwjglCanvas implements LwjglApplicationBase {
 				scaleX = (float)transform.getScaleX();
 				scaleY = (float)transform.getScaleY();
 
-				if (SharedLibraryLoader.isMac) {
+				if (SharedLibraryLoader.os == Os.MacOsX) {
 					EventQueue.invokeLater(new Runnable() {
 						public void run () {
 							create();
