@@ -18,9 +18,7 @@ package com.badlogic.gdx.backends.lwjgl;
 
 import static com.badlogic.gdx.utils.SharedLibraryLoader.*;
 
-import com.badlogic.gdx.utils.GdxNativesLoader;
-import com.badlogic.gdx.utils.GdxRuntimeException;
-import com.badlogic.gdx.utils.SharedLibraryLoader;
+import com.badlogic.gdx.utils.*;
 
 import java.io.File;
 import java.lang.reflect.Method;
@@ -50,18 +48,41 @@ public final class LwjglNativesLoader {
 		SharedLibraryLoader loader = new SharedLibraryLoader();
 		File nativesDir = null;
 		try {
-			if (isWindows) {
-				nativesDir = loader.extractFile(is64Bit ? "lwjgl64.dll" : "lwjgl.dll", null).getParentFile();
-				if (!LwjglApplicationConfiguration.disableAudio)
-					loader.extractFileTo(is64Bit ? "OpenAL64.dll" : "OpenAL32.dll", nativesDir);
-			} else if (isMac) {
-				nativesDir = loader.extractFile("liblwjgl.dylib", null).getParentFile();
-				if (!LwjglApplicationConfiguration.disableAudio) loader.extractFileTo("openal.dylib", nativesDir);
-			} else if (isLinux) {
-				nativesDir = loader.extractFile(is64Bit ? "liblwjgl64.so" : "liblwjgl.so", null).getParentFile();
-				if (!LwjglApplicationConfiguration.disableAudio)
-					loader.extractFileTo(is64Bit ? "libopenal64.so" : "libopenal.so", nativesDir);
+			String lwjglLib = null;
+			String openalLib = null;
+			switch (os) {
+			case Windows:
+				switch (bitness) {
+				case _32:
+					lwjglLib = "lwjgl.dll";
+					openalLib = "OpenAL32.dll";
+					break;
+				case _64:
+					lwjglLib = "lwjgl64.dll";
+					openalLib = "OpenAL64.dll";
+					break;
+				}
+				break;
+			case MacOsX:
+				lwjglLib = "liblwjgl.dylib";
+				openalLib = "openal.dylib";
+				break;
+			case Linux:
+				switch (bitness) {
+				case _32:
+					lwjglLib = "liblwjgl.so";
+					openalLib = "libopenal.so";
+					break;
+				case _64:
+					lwjglLib = "liblwjgl64.so";
+					openalLib = "libopenal64.so";
+					break;
+				}
+				break;
 			}
+			if (lwjglLib == null) throw new GdxRuntimeException("Unknown LWJGL platform: " + os + ", " + bitness);
+			nativesDir = loader.extractFile(lwjglLib, null).getParentFile();
+			if (!LwjglApplicationConfiguration.disableAudio) loader.extractFileTo(openalLib, nativesDir);
 		} catch (Throwable ex) {
 			throw new GdxRuntimeException("Unable to extract LWJGL natives.", ex);
 		}
