@@ -22,6 +22,7 @@ jnigen {
 	add(Linux, x64)
 	add(Linux, x32, ARM)
 	add(Linux, x64, ARM)
+	add(Linux, x64, RISCV)
 	add(MacOsX, x64)
 	add(MacOsX, x64, ARM)
 	add(Android)
