@@ -88,6 +88,7 @@ jnigen {
 	add(Linux, x64)
 	add(Linux, x32, ARM)
 	add(Linux, x64, ARM)
+	add(Linux, x64, RISCV)
 	add(MacOsX, x64) {
 		linkerFlags += " -framework CoreServices -framework Carbon"
 	}
