@@ -27,6 +27,7 @@ import java.util.Random;
 import java.util.UUID;
 import java.util.zip.CRC32;
 
+import com.badlogic.gdx.utils.Architecture;
 import com.badlogic.gdx.utils.GdxRuntimeException;
 import com.badlogic.gdx.utils.SharedLibraryLoader;
 
@@ -176,7 +177,8 @@ public class GlfwAWTLoader {
 			}
 		}
 
-		String source = SharedLibraryLoader.isARM ? "macosarm64/libglfwarm64.dylib" : "macosx64/libglfw.dylib";
+		String source = SharedLibraryLoader.architecture == Architecture.ARM ? "macosarm64/libglfwarm64.dylib"
+			: "macosx64/libglfw.dylib";
 		String crc = crc(GlfwAWTLoader.class.getResourceAsStream("/" + source));
 		File sharedLib = getExtractedFile(crc, new File(source).getName());
 
