@@ -10,6 +10,7 @@ import javax.imageio.ImageIO;
 import javax.swing.*;
 
 import com.badlogic.gdx.backends.lwjgl3.awt.GlfwAWTLoader;
+import com.badlogic.gdx.utils.Os;
 import com.badlogic.gdx.utils.SharedLibraryLoader;
 import org.lwjgl.glfw.GLFWMouseButtonCallback;
 import org.lwjgl.opengl.GL;
@@ -52,7 +53,7 @@ public class AwtTestLWJGL {
 	};
 
 	public static void main (String[] args) throws Exception {
-		if (SharedLibraryLoader.isMac) {
+		if (SharedLibraryLoader.os == Os.MacOsX) {
 			Configuration.GLFW_CHECK_THREAD0.set(false);
 			Configuration.GLFW_LIBRARY_NAME.set(GlfwAWTLoader.load().getAbsolutePath());
 		}
